Bootstraped camclient (from masterdetail)

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 
 *~
 *_
-*.swp
 .*.sw?
 *.tmp
 *.bak
@@ -10,12 +9,13 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+/.idea
+# /.idea/caches
+# /.idea/libraries
+# /.idea/modules.xml
+# /.idea/workspace.xml
+# /.idea/navEditor.xml
+# /.idea/assetWizardSettings.xml
 .DS_Store
 /build
 /captures
