--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.masterdetail">
+    package="com.example.camclient">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
@@ -11,11 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MasterDetail">
+        android:theme="@style/Theme.CamClient">
         <activity
             android:name=".ItemListActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MasterDetail.NoActionBar">
+            android:theme="@style/Theme.CamClient.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,10 +26,10 @@
             android:name=".ItemDetailActivity"
             android:label="@string/title_item_detail"
             android:parentActivityName=".ItemListActivity"
-            android:theme="@style/Theme.MasterDetail.NoActionBar">
+            android:theme="@style/Theme.CamClient.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.masterdetail.ItemListActivity" />
+                android:value="com.example.camclient.ItemListActivity" />
         </activity>
     </application>
 
