v.0.1.0: Using `lilliputten.ru` domain

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.camclient">
+    package="ru.lilliputten.camclient">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
@@ -29,7 +29,7 @@
             android:theme="@style/Theme.CamClient.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.camclient.ItemListActivity" />
+                android:value="ru.lilliputten.camclient.ItemListActivity" />
         </activity>
     </application>
 
